collective-arc-k8s/frontend/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: collective-arc
