collective-arc-k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: collective-arc
  annotations:
    kubernetes.io/ingress.global-static-ip-name: collective-arc-ip
    networking.gke.io/managed-certificates: collective-arc-cert
    networking.gke.io/ssl-redirect: "true"
spec:
  rules:
    - host: collectivearc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-collective-arc
                port:
                  number: 80
    - host: www.collectivearc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-collective-arc
                port:
                  number: 80
